--- a/src/app/features/post-login/guidance-document/guidance-document-list/guidance-document-list.component.html
+++ b/src/app/features/post-login/guidance-document/guidance-document-list/guidance-document-list.component.html
@@ -1,23 +1,22 @@
-<link
-  rel="stylesheet"
-  href="https://use.fontawesome.com/releases/v5.8.1/css/solid.css"
-/>
 <h5 class="mat-headline-5 fw-medium">Danh sách văn bản bổ sung</h5>
 <div class="table-container">
   <div
     class="my-4 row advance-search px-3 d-flex flex-row justify-content-between"
   >
     <div class="form-group col-md-6" *ngIf="!advanceSearch">
-      <input
-        type="text"
-        name="globalSearch"
-        id="globalSearch"
-        class="form-control small-input fontAwesome mb-3"
-        [(ngModel)]="globalSearch"
-        (keyup)="loadGuidanceDocuments()"
-        pInputText
-        placeholder="&#xF002; Tra cứu nhanh theo tiêu đề hoặc người tạo"
-      />
+      <span class="p-input-icon-left search-with-icon w-100">
+        <i class="bi bi-search"></i>
+        <input
+          type="text"
+          name="globalSearch"
+          id="globalSearch"
+          class="w-100 fw-medium"
+          [(ngModel)]="globalSearch"
+          (keyup)="loadGuidanceDocuments()"
+          pInputText
+          placeholder="Tra cứu nhanh theo tiêu đề hoặc người tạo"
+        />
+      </span>
     </div>
     <div *ngIf="advanceSearch" class="col-md-10">
       <div class="row">
