--- a/src/app/features/post-login/issue/issue-list/issue-list.component.html
+++ b/src/app/features/post-login/issue/issue-list/issue-list.component.html
@@ -17,14 +17,15 @@
       <ng-template pTemplate="caption">
         <div class="table-header">
           <div>
-            <!-- <i class="bi bi-search"></i> -->
-            <input
-              *ngIf="!filterVisible"
-              pInputText
-              type="text"
-              (input)="dt.filterGlobal($any($event.target).value, 'contains')"
-              placeholder="Tìm kiếm theo tên kế hoạch, tên người đăng"
-            />
+            <span class="p-input-icon-left search-with-icon" *ngIf="!filterVisible">
+              <i class="bi bi-search"></i>
+              <input
+                pInputText
+                type="text"
+                (input)="dt.filterGlobal($any($event.target).value, 'contains')"
+                placeholder="Tìm kiếm theo tên kế hoạch, tên người đăng"
+              />
+            </span>
             <div class="d-flex" *ngIf="filterVisible">
               <div>
                 <p-columnFilter
