--- a/src/app/features/post-login/school/school-list/school-list.component.html
+++ b/src/app/features/post-login/school/school-list/school-list.component.html
@@ -1,15 +1,4 @@
-<link
-  rel="stylesheet"
-  href="https://use.fontawesome.com/releases/v5.8.1/css/solid.css"
-/>
-<link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-  crossorigin="anonymous"
-/>
 <h5 class="mat-headline-5 fw-medium">Danh sách các trường</h5>
-
 <div class="card">
   <p-table
     #dt1
@@ -19,7 +8,6 @@
     dataKey="schoolId"
     [showCurrentPageReport]="true"
     [tableStyle]="{ 'min-width': '50rem', 'min-height': '150px' }"
-    currentPageReportTemplate="Hiển thị từ {first} tới {last} trên tổng {totalRecords} bản ghi"
     [rowsPerPageOptions]="[5, 10, 20]"
     [globalFilterFields]="['schoolId', 'schoolName', 'exactAddress']"
     [(selection)]="selectedSchool"
@@ -93,13 +81,6 @@
             </tr>
           </div>
         </span>
-        <!-- <button
-          pButton
-          label="Clear"
-          class="p-button-outlined"
-          icon="pi pi-filter-slash"
-          (click)="clear(dt1)"
-        ></button> -->
         <div>
           <button
             *ngIf="!filterVisible"
@@ -215,7 +196,9 @@
     </ng-template>
     <ng-template pTemplate="emptymessage">
       <tr>
-        <td colspan="5">Không tìm thấy trường nào phù hợp</td>
+        <td colspan="5">
+          <p class="w-100 text-center mt-4 fw-medium fs-4">Không tìm thấy trường nào phù hợp</p>
+        </td>
       </tr>
     </ng-template>
   </p-table>
