--- a/src/app/features/post-login/user/user-list/user-list.component.html
+++ b/src/app/features/post-login/user/user-list/user-list.component.html
@@ -1,23 +1,22 @@
-<link
-  rel="stylesheet"
-  href="https://use.fontawesome.com/releases/v5.8.1/css/solid.css"
-/>
 <h5 class="mat-headline-5 fw-medium">Tra cứu người dùng</h5>
 <div class="table-container">
   <div
     class="my-4 row advance-search px-3 d-flex flex-row justify-content-between"
   >
     <div class="form-group col-md-6" *ngIf="!advanceSearch">
-      <input
-        type="text"
-        name="globalSearch"
-        id="globalSearch"
-        class="form-control small-input fontAwesome mb-3"
-        [(ngModel)]="globalSearch"
-        (keyup)="loadUsers()"
-        pInputText
-        placeholder="&#xF002; Tra cứu nhanh theo tên, số điện thoại hoặc email"
-      />
+      <span class="p-input-icon-left search-with-icon w-100">
+        <i class="bi bi-search"></i>
+        <input
+          type="text"
+          name="globalSearch"
+          id="globalSearch"
+          class="w-100 fw-medium"
+          [(ngModel)]="globalSearch"
+          (keyup)="loadUsers()"
+          pInputText
+          placeholder="Tra cứu nhanh theo tên, số điện thoại hoặc email"
+        />
+      </span>
     </div>
     <div *ngIf="advanceSearch" class="col-md-10">
       <div class="row">
@@ -202,7 +201,6 @@
               ></i>
             </div>
           </th>
-
           <th (click)="onSort('user.account.school')">
             <div class="header-container">
               <span class="icon-text">Đơn vị</span>
@@ -258,7 +256,11 @@
           </th>
           <th></th>
         </tr>
-        <p class="w-100" *ngIf="totalElements == 0">Không tìm thấy bản ghi nào phù hợp</p>
+        <tr>
+          <td colspan="8">
+            <p class="w-100 text-center mt-4 fw-medium fs-4" *ngIf="totalElements == 0">Không tìm thấy bản ghi nào phù hợp</p>
+          </td>
+        </tr>
       </thead>
       <ng-container *ngIf="users">
         <tbody *ngIf="users.length > 0">
