--- a/src/app/features/post-login/inspection-plan/inspection-plan-list/inspection-plan-list.component.html
+++ b/src/app/features/post-login/inspection-plan/inspection-plan-list/inspection-plan-list.component.html
@@ -77,7 +77,7 @@
         <div class="col-md-4">
           <label class="fw-medium">Kế hoạch</label>
           <p-dropdown class="full-width-dropdown" [options]="issueDropDowns" dataKey="issueId"
-                      [(ngModel)]="currentIssueSelected"    optionLabel="issueName"
+                      [(ngModel)]="currentIssueSelected" optionLabel="issueName"
                       [filter]="true" filterBy="issueName" optionValue="issueId" [showClear]="true"
                       (onChange)="loadDocuments()"
                       placeholder="Chọn 1 kế hoạch thanh tra"
@@ -88,7 +88,7 @@
         <div class="col-md-4">
           <label class="fw-medium">Tên trường</label>
           <p-dropdown class="full-width-dropdown" [options]="schools" dataKey="schoolId"
-                      [(ngModel)]="selectedSchool"    optionLabel="schoolName"
+                      [(ngModel)]="selectedSchool" optionLabel="schoolName"
                       [filter]="true" filterBy="schoolName" optionValue="schoolId" [showClear]="true"
                       (onChange)="loadDocuments()"
                       placeholder="Chọn 1 trường"
@@ -114,7 +114,21 @@
             </ng-template>
           </p-dropdown>
         </div>
+        <div class="col-md-4" *ngIf="!(this.isPrincipal || this.isDirector)">
+          <label class="fw-medium">Phiên thanh tra bao gồm</label>
+          <p-dropdown placeholder="Chọn 1 trạng thái"
+                      [options]="isMineSelection"
+                      [(ngModel)]="isMine"
+                      [showClear]="true"
+                      (onChange)="loadDocuments()"
+                      dataKey="value"
+                      optionValue="value"
+          >
+
+          </p-dropdown>
+        </div>
       </div>
+
     </div>
     <div
       *ngIf="advanceSearch"
@@ -126,114 +140,115 @@
       class="col-md-12 d-flex flex-row justify-content-end align-items-center mt-2"
     >
       <button pButton (click)="onCreateInspectionPlan()"
-        *ngIf="isDirector"
-      >Tạo mới</button>
+              *ngIf="isDirector"
+      >Tạo mới
+      </button>
     </div>
   </div>
   <div class="table-content">
     <table class="table p-2 table-hover align-middle">
       <thead>
-        <tr>
-          <th (click)="onSort('inspectionPlanName')">
-            <div class="header-container">
-              <span class="icon-text">Tên kế hoạch</span>
-              <i
-                class="bi bi-sort-up"
-                *ngIf="
+      <tr>
+        <th (click)="onSort('inspectionPlanName')">
+          <div class="header-container">
+            <span class="icon-text">Tên kế hoạch</span>
+            <i
+              class="bi bi-sort-up"
+              *ngIf="
                   sortBy === 'inspectionPlanName' && sortDirection === 'asc'
                 "
-              ></i>
-              <i
-                class="bi bi-sort-down"
-                *ngIf="
+            ></i>
+            <i
+              class="bi bi-sort-down"
+              *ngIf="
                   sortBy === 'inspectionPlanName' && sortDirection === 'desc'
                 "
-              ></i>
-            </div>
-          </th>
-          <th (click)="onSort('issue.createdDate')">
-            <div class="header-container">
-              <span class="icon-text">Kế hoạch kiểm tra</span>
-              <i
-                class="bi bi-sort-up"
-                *ngIf="
+            ></i>
+          </div>
+        </th>
+        <th (click)="onSort('issue.createdDate')">
+          <div class="header-container">
+            <span class="icon-text">Kế hoạch kiểm tra</span>
+            <i
+              class="bi bi-sort-up"
+              *ngIf="
                   sortBy === 'issue.createdDate' && sortDirection === 'asc'
                 "
-              ></i>
-              <i
-                class="bi bi-sort-down"
-                *ngIf="
+            ></i>
+            <i
+              class="bi bi-sort-down"
+              *ngIf="
                   sortBy === 'issue.createdDate' && sortDirection === 'desc'
                 "
-              ></i>
-            </div>
-          </th>
-          <th (click)="onSort('school.schoolName')">
-            <div class="header-container">
-              <span class="icon-text">Trường</span>
-              <i
-                class="bi bi-sort-up"
-                *ngIf="
+            ></i>
+          </div>
+        </th>
+        <th (click)="onSort('school.schoolName')">
+          <div class="header-container">
+            <span class="icon-text">Trường</span>
+            <i
+              class="bi bi-sort-up"
+              *ngIf="
                   sortBy === 'school.schoolName' && sortDirection === 'asc'
                 "
-              ></i>
-              <i
-                class="bi bi-sort-down"
-                *ngIf="
+            ></i>
+            <i
+              class="bi bi-sort-down"
+              *ngIf="
                   sortBy === 'school.schoolName' && sortDirection === 'desc'
                 "
-              ></i>
-            </div>
-          </th>
-          <th (click)="onSort('startDate')">
-            <div class="header-container">
-              <span class="icon-text">Ngày bắt đầu</span>
-              <i
-                class="bi bi-sort-up"
-                *ngIf="sortBy === 'startDate' && sortDirection === 'asc'"
-              ></i>
-              <i
-                class="bi bi-sort-down"
-                *ngIf="sortBy === 'startDate' && sortDirection === 'desc'"
-              ></i>
-            </div>
-          </th>
-          <th (click)="onSort('endDate')">
-            <div class="header-container">
-              <span class="icon-text">Ngày kết thúc</span>
-              <i
-                class="bi bi-sort-up"
-                *ngIf="sortBy === 'endDate' && sortDirection === 'asc'"
-              ></i>
-              <i
-                class="bi bi-sort-down"
-                *ngIf="sortBy === 'endDate' && sortDirection === 'desc'"
-              ></i>
-            </div>
-          </th>
-          <th (click)="onSort('status')">
-            <div class="header-container">
-              <span class="icon-text">Trạng thái</span>
-              <i
-                class="bi bi-sort-up"
-                *ngIf="sortBy === 'status' && sortDirection === 'asc'"
-              ></i>
-              <i
-                class="bi bi-sort-down"
-                *ngIf="sortBy === 'status' && sortDirection === 'desc'"
-              ></i>
-            </div>
-          </th>
+            ></i>
+          </div>
+        </th>
+        <th (click)="onSort('startDate')">
+          <div class="header-container">
+            <span class="icon-text">Ngày bắt đầu</span>
+            <i
+              class="bi bi-sort-up"
+              *ngIf="sortBy === 'startDate' && sortDirection === 'asc'"
+            ></i>
+            <i
+              class="bi bi-sort-down"
+              *ngIf="sortBy === 'startDate' && sortDirection === 'desc'"
+            ></i>
+          </div>
+        </th>
+        <th (click)="onSort('endDate')">
+          <div class="header-container">
+            <span class="icon-text">Ngày kết thúc</span>
+            <i
+              class="bi bi-sort-up"
+              *ngIf="sortBy === 'endDate' && sortDirection === 'asc'"
+            ></i>
+            <i
+              class="bi bi-sort-down"
+              *ngIf="sortBy === 'endDate' && sortDirection === 'desc'"
+            ></i>
+          </div>
+        </th>
+        <th (click)="onSort('status')">
+          <div class="header-container">
+            <span class="icon-text">Trạng thái</span>
+            <i
+              class="bi bi-sort-up"
+              *ngIf="sortBy === 'status' && sortDirection === 'asc'"
+            ></i>
+            <i
+              class="bi bi-sort-down"
+              *ngIf="sortBy === 'status' && sortDirection === 'desc'"
+            ></i>
+          </div>
+        </th>
 
-          <th></th>
-        </tr>
-        <span *ngIf="totalElements == 0"
-          >Không tìm thấy bản ghi nào phù hợp</span
-        >
+        <th></th>
+      </tr>
+      <span *ngIf="totalElements == 0"
+      >Không tìm thấy bản ghi nào phù hợp</span
+      >
       </thead>
       <tbody *ngIf="inspectionPlans && inspectionPlans.length > 0">
-        <tr
-          *ngFor="
+      <tr
+        *ngFor="
             let plan of inspectionPlans
               | paginate
                 : {
@@ -243,56 +258,55 @@
                   };
             let i = index
           "
+      >
+        <td
+          class="py-4 px-2"
+          pTooltip="{{ plan.inspectionPlanName }}"
+          tooltipPosition="top"
         >
-          <td
-            class="py-4 px-2"
-            pTooltip="{{ plan.inspectionPlanName }}"
-            tooltipPosition="top"
-          >
-            {{ plan.inspectionPlanName }}
-          </td>
-          <td
-            class="py-4 px-2"
-            pTooltip="{{ plan.issueName }}"
-            tooltipPosition="top"
-          >
-            {{ plan.issueName }}
-          </td>
-          <td
-            class="py-4 px-2"
-            pTooltip="{{ plan.schoolName }}"
-            tooltipPosition="top"
-          >
-            {{ plan.schoolName }}
-          </td>
-          <td class="py-4 px-2">{{ plan.startDate | date : "dd/MM/yyyy" }}</td>
-          <td class="py-4 px-2">{{ plan.endDate | date : "dd/MM/yyyy" }}</td>
-          <td class="py-4 px-2">
-            <p-tag
-              [severity]="getStatusSeverity(plan?.status?.statusId)"
-              [value]="plan.statusName"
-            ></p-tag>
-          </td>
-          <td class="py-3 px-2">
-            <div class="d-flex justify-content-between align-items-center">
-              <button
-                class="action-button"
-                type="button"
-                (click)="onDetail(plan.inspectionPlanId)"
-              >
-                <i class="bi bi-info-circle-fill"></i>
-              </button>
-              <button
-                class="action-button"
-                type="button"
-                [disabled]="!isChiefInspector"
-                (click)="onUpdate(plan.inspectionPlanId)"
-              >
-                <i class="bi bi-pencil-fill"></i>
-              </button>
-            </div>
-          </td>
-        </tr>
+          {{ plan.inspectionPlanName }}
+        </td>
+        <td
+          class="py-4 px-2"
+          pTooltip="{{ plan.issueName }}"
+          tooltipPosition="top"
+        >
+          {{ plan.issueName }}
+        </td>
+        <td
+          class="py-4 px-2"
+          pTooltip="{{ plan.schoolName }}"
+          tooltipPosition="top"
+        >
+          {{ plan.schoolName }}
+        </td>
+        <td class="py-4 px-2">{{ plan.startDate | date : "dd/MM/yyyy" }}</td>
+        <td class="py-4 px-2">{{ plan.endDate | date : "dd/MM/yyyy" }}</td>
+        <td class="py-4 px-2">
+          <p-tag
+            [severity]="getStatusSeverity(plan?.status?.statusId)"
+            [value]="plan.statusName"
+          ></p-tag>
+        </td>
+        <td class="py-3 px-2">
+          <div class="d-flex justify-content-between align-items-center">
+            <button
+              class="action-button"
+              type="button"
+              (click)="onDetail(plan.inspectionPlanId)"
+            >
+              <i class="bi bi-info-circle-fill"></i>
+            </button>
+            <button
+              class="action-button"
+              type="button"
+              (click)="onUpdate(plan.inspectionPlanId)"
+            >
+              <i class="bi bi-pencil-fill"></i>
+            </button>
+          </div>
+        </td>
+      </tr>
       </tbody>
     </table>
     <div class="d-flex justify-content-center table-footer">
