--- a/src/app/features/post-login/user/user-list/user-list.component.html
+++ b/src/app/features/post-login/user/user-list/user-list.component.html
@@ -344,7 +344,7 @@
       </ng-container>
     </table>
   </div>
-  <div class="d-flex justify-content-center table-footer" *ngIf="users">
+  <div class="d-flex justify-content-center table-footer" *ngIf="users.length > 0">
     <div class="me-3 mt-3" *ngIf="users">
       <pagination-controls
         previousLabel=""
